[gd_scene load_steps=11 format=3 uid="uid://u1375je75c1f"]

[ext_resource type="Script" path="res://scenes/ui/ProjectEditor/ProjectEditor.gd" id="2_rxefj"]
[ext_resource type="PackedScene" uid="uid://dfag2aakh64er" path="res://scenes/ui/dialogs/UnsavedChangesDialog/UnsavedChangesDialog.tscn" id="3_fwduj"]
[ext_resource type="PackedScene" uid="uid://xyp0got3c5dp" path="res://scenes/ui/ProjectEditor/LayoutPanel/LayoutPanel.tscn" id="4_3cv8w"]
[ext_resource type="PackedScene" uid="uid://dtgjpudmf5pva" path="res://scenes/ui/dialogs/ExportToImageDialog/ExportToImageDialog.tscn" id="4_h12le"]
[ext_resource type="PackedScene" uid="uid://y61v2o6rd0mg" path="res://scenes/ui/ProjectEditor/BOM_List/BOM_List.tscn" id="5_qt3l6"]
[ext_resource type="Texture2D" uid="uid://h0ug1cx5m5aj" path="res://assets/icons/grass_128.png" id="5_y37na"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q6kto"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.105882, 0.113725, 0.12549, 1)

[sub_resource type="GDScript" id="GDScript_bcc41"]
script/source = "extends Window

@onready var name_label := $PanelContainer/VBox/NameLabel
@onready var ver_label := $PanelContainer/VBox/VersionLabel
@onready var source_link := $PanelContainer/VBox/SourceLink

func _ready():
	name_label.text = ProjectUtils.get_app_name()
	ver_label.text = \"Version: %s\" % ProjectUtils.get_app_version()
	var repo_path := \"%s/%s\" % [Globals.GITHUB_USER, Globals.GITHUB_REPO]
	source_link.text = \"[center][url=https://github.com/%s]github.com/%s[/url][/center]\" % [repo_path, repo_path]
	source_link.meta_clicked.connect(_on_source_link_meta_clicked)

func _on_source_link_meta_clicked(meta):
	OS.shell_open(meta)

func _on_close_requested():
	hide()
"

[sub_resource type="GDScript" id="GDScript_rj45b"]
script/source = "extends Window

func _on_close_requested() -> void:
	hide()
"

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kst3f"]

[node name="ProjectEditor" type="PanelContainer"]
anchors_preset = -1
anchor_right = 1.6
anchor_bottom = 1.8
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_q6kto")
script = ExtResource("2_rxefj")

[node name="SaveAsDialog" type="FileDialog" parent="."]
title = "Save Project As ..."
size = Vector2i(900, 600)
ok_button_text = "Select Current Folder"
mode_overrides_title = false
file_mode = 2
access = 2

[node name="UnsavedChangesDialog" parent="." instance=ExtResource("3_fwduj")]
visible = false

[node name="ExportToImageDialog" parent="." instance=ExtResource("4_h12le")]
visible = false

[node name="AboutDialog" type="Window" parent="."]
title = "About"
initial_position = 1
size = Vector2i(500, 250)
visible = false
script = SubResource("GDScript_bcc41")

[node name="PanelContainer" type="PanelContainer" parent="AboutDialog"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="AboutDialog/PanelContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="AboutDialog/PanelContainer/VBox"]
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("5_y37na")

[node name="NameLabel" type="Label" parent="AboutDialog/PanelContainer/VBox"]
layout_mode = 2
text = "Applicat Name"
horizontal_alignment = 1

[node name="VersionLabel" type="Label" parent="AboutDialog/PanelContainer/VBox"]
layout_mode = 2
text = "Version: 1.0.0"
horizontal_alignment = 1

[node name="SourceLink" type="RichTextLabel" parent="AboutDialog/PanelContainer/VBox"]
layout_mode = 2
bbcode_enabled = true
text = "[center][url=]github.com/user/repo[/url][/center]"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="HelpDialog" type="Window" parent="."]
title = "Help"
size = Vector2i(600, 400)
visible = false
script = SubResource("GDScript_rj45b")

[node name="PanelContainer" type="PanelContainer" parent="HelpDialog"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScrollContainer" type="ScrollContainer" parent="HelpDialog/PanelContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="HelpDialog/PanelContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
text = "[b]Editor Keyboard Shortcuts[/b]
[ul]
Save: Ctrl + S
Save As: Ctrl + Shift + S
Undo: Ctrl + Z
Redo: Ctrl + Shift + Z
Cancel: Escape
Delete item: Delete
Shift item up: Page Up
Shift item down: Page Down
Shift item to top: Home
Shift item to bottom: End
[/ul]

[b]Editor Mouse Controls[/b]
[ul]
Zoom: Mouse Wheel
Pan: Click Middle Mouse Wheel + Drag
Select item: Left click
Multi-select items: Shift + Left Click
[/ul]"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="MenuBar" type="MenuBar" parent="VBoxContainer"]
layout_mode = 2

[node name="Project" type="PopupMenu" parent="VBoxContainer/MenuBar"]
title = "Project"
size = Vector2i(104, 116)
item_count = 4
item_0/text = "Save"
item_0/id = 2
item_1/text = "Save As ..."
item_1/id = 3
item_2/text = "Export to Image..."
item_2/id = 4
item_3/text = "Quit to Project Manager"
item_3/id = 5

[node name="Edit" type="PopupMenu" parent="VBoxContainer/MenuBar"]
title = "Edit"
item_count = 2
item_0/text = "Undo"
item_0/id = 1
item_0/disabled = true
item_1/text = "Redo"
item_1/id = 2
item_1/disabled = true

[node name="Help" type="PopupMenu" parent="VBoxContainer/MenuBar"]
title = "Help"
item_count = 2
item_0/text = "Help ..."
item_0/id = 1
item_1/text = "About ..."
item_1/id = 2

[node name="ProjectTabs" type="TabContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_kst3f")
tab_alignment = 1
current_tab = 0
tab_focus_mode = 0

[node name="Layout" parent="VBoxContainer/ProjectTabs" instance=ExtResource("4_3cv8w")]
layout_mode = 2
metadata/_tab_index = 0

[node name="BOM List" parent="VBoxContainer/ProjectTabs" instance=ExtResource("5_qt3l6")]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[connection signal="dir_selected" from="SaveAsDialog" to="." method="_on_save_as_dialog_dir_selected"]
[connection signal="cancel" from="UnsavedChangesDialog" to="." method="_on_unsaved_changes_dialog_cancel"]
[connection signal="discard" from="UnsavedChangesDialog" to="." method="_on_unsaved_changes_dialog_discard"]
[connection signal="save" from="UnsavedChangesDialog" to="." method="_on_unsaved_changes_dialog_save"]
[connection signal="export" from="ExportToImageDialog" to="." method="_on_export_to_image_dialog_export"]
[connection signal="zone_selection_changed" from="ExportToImageDialog" to="." method="_on_export_to_image_dialog_zone_selection_changed"]
[connection signal="close_requested" from="AboutDialog" to="AboutDialog" method="_on_close_requested"]
[connection signal="close_requested" from="HelpDialog" to="HelpDialog" method="_on_close_requested"]
[connection signal="id_pressed" from="VBoxContainer/MenuBar/Project" to="." method="_on_project_id_pressed"]
[connection signal="id_pressed" from="VBoxContainer/MenuBar/Edit" to="." method="_on_edit_id_pressed"]
[connection signal="id_pressed" from="VBoxContainer/MenuBar/Help" to="." method="_on_help_id_pressed"]
[connection signal="tab_changed" from="VBoxContainer/ProjectTabs" to="." method="_on_project_tabs_tab_changed"]
